--- a/work2.ipynb
+++ b/work2.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#网页爬取模块\n",
+    "#网页爬取模块ss \n",
     "def get_html(html,Folder='default',postifix='',cookie=''):\n",
     "    try:\n",
     "        headers = {\n",
@@ -46,7 +46,7 @@
     "            f.close()\n",
     "    except Exception as e :\n",
     "        print(e)\n",
-    "    return \"ok\""
+    "    return \"ok111\""
    ]
   },
   {
