--- a/work2.ipynb
+++ b/work2.ipynb
@@ -33,7 +33,7 @@
     "        'Cookie':cookie\n",
     "       }\n",
     "        #使用国外代理\n",
-    "        # proxies={'http':'http://127.0.0.1:7890','https':'http://127.0.0.1:7890'}\n",
+    "        proxies={'http':'http://127.0.0.1:7890','https':'http://127.0.0.1:7890'}\n",
     "        #get请求获取界面\n",
     "        html = requests.get(html,headers=headers,proxies=proxies)\n",
     "        #转码为utf-8\n",
@@ -2412,7 +2412,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "c =30\n",
+    "print(30)"
+   ]
   }
  ],
  "metadata": {
