--- a/work2.ipynb
+++ b/work2.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "#网页爬取模块ss \n",
-    "def get_html(html,Folder='default',postifix='',cookie=''):\n",
+    "def get_html(url,Folder='default',postifix='',cookie=''):\n",
     "    try:\n",
     "        headers = {\n",
     "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/99.0.4844.74 Safari/537.36',\n",
@@ -35,14 +35,14 @@
     "        #使用国外代理\n",
     "        proxies={'http':'http://127.0.0.1:7890','https':'http://127.0.0.1:7890'}\n",
     "        #get请求获取界面\n",
-    "        html = requests.get(html,headers=headers,proxies=proxies)\n",
+    "        url = requests.get(url,headers=headers,proxies=proxies)\n",
     "        #转码为utf-8\n",
-    "        html.encoding = html.apparent_encoding\n",
+    "        url.encoding = url.apparent_encoding\n",
     "        #推导存放路径\n",
     "        path = './'+Folder+'/'+Folder+postifix+\".html\"\n",
     "        #写入文件\n",
     "        with open(path,\"wb\") as f:\n",
-    "            f.write(html.content)\n",
+    "            f.write(url.content)\n",
     "            f.close()\n",
     "    except Exception as e :\n",
     "        print(e)\n",
@@ -84,9 +84,7 @@
     "stackoverflow_cookie = ''\n",
     "github_cookie = ''\n",
     "get_html('https://stackoverflow.com/?tab=hot','stackoverflow','_'+today,stackoverflow_cookie)\n",
-    "get_html('https://github.com/trending?since=daily','github_today','_'+today,github_cookie)\n",
-    "get_html('https://github.com/trending?since=weekly','github_week','_'+today,github_cookie)\n",
-    "get_html('https://github.com/trending?since=monthly','github_monthly','_'+today,github_cookie)"
+    "get_html('https://github.com/trending?since=daily','github_today','_'+today,github_cookie)"
    ]
   },
   {
@@ -2405,16 +2403,6 @@
     "github_line.render(\"github_line.html\")\n",
     "stackoverflow_line.render(\"stackoverflow_line.html\")\n",
     "bar_3d.render(\"bar_3d.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c =30\n",
-    "print(30)"
    ]
   }
  ],
